GPv3: Wrong onion skinning icon in the dopesheet

`PROP_ICONS_CONSECUTIVE` is set for `use_onion_skinning` property with the
help of `RNA_def_property_ui_icon`. In this case, `but->iconadd` will
handle the other icon for "toggle" button types. So just use
`ICON_ONIONSKIN_OFF` when drawing the onion skinning button in dopesheet.

Resolves #121232

Pull Request: https://projects.blender.org/blender/blender/pulls/121254